--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /**
 * Template Name: Medilab - v4.7.1
 * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
-* Author: BootstrapMade.com
+* Author: Leonardo Soares
 * License: https://bootstrapmade.com/license/
 */
 
@@ -10,16 +10,16 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #000;
 }
 
 a {
-  color: #1977cc;
+  color: #000;
   text-decoration: none;
 }
 
 a:hover {
-  color: #3291e6;
+  color: #000;
   text-decoration: none;
 }
 
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #1977cc;
+  border: 6px solid #000;
   border-top-color: #d1e6f9;
   border-radius: 50%;
   width: 60px;
@@ -82,7 +82,8 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #1977cc;
+  background: #000;
+  color: #fff;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -90,12 +91,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 .back-to-top i {
   font-size: 28px;
-  color: #fff;
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #298ce5;
-  color: #fff;
+  background: #fff;
+  color: #000;
+  border: 1px solid #000;
 }
 .back-to-top.active {
   visibility: visible;
@@ -125,10 +126,10 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
 }
 #topbar .contact-info a:hover {
-  color: #1977cc;
+  color: #000;
 }
 #topbar .contact-info i {
-  color: #1977cc;
+  color: #000;
   padding-right: 4px;
   margin-left: 15px;
   line-height: 0;
@@ -137,14 +138,14 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 0;
 }
 #topbar .social-links a {
-  color: #437099;
+  color: #000;
   padding-left: 15px;
   display: inline-block;
   line-height: 1px;
   transition: 0.3s;
 }
 #topbar .social-links a:hover {
-  color: #1977cc;
+  color: #00000070;
 }
 #topbar .social-links a:first-child {
   border-left: 0;
@@ -185,7 +186,7 @@ h1, h2, h3, h4, h5, h6 {
 */
 .appointment-btn {
   margin-left: 25px;
-  background: #1977cc;
+  background: #000;
   color: #fff;
   border-radius: 50px;
   padding: 8px 25px;
@@ -195,8 +196,9 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
 }
 .appointment-btn:hover {
-  background: #166ab5;
-  color: #fff;
+  background: #fff;
+  color: #000;
+  border: 1px solid #000;
 }
 @media (max-width: 768px) {
   .appointment-btn {
@@ -246,8 +248,8 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #1977cc;
-  border-color: #1977cc;
+  color: #000;
+  border-color: #000;
 }
 .navbar .dropdown ul {
   display: block;
@@ -278,7 +280,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #1977cc;
+  color: #000;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -367,7 +369,7 @@ h1, h2, h3, h4, h5, h6 {
   border: none;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #1977cc;
+  color: #000;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -393,7 +395,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #1977cc;
+  color: #000;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -418,7 +420,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 56px;
   text-transform: uppercase;
-  color: #2c4964;
+  color: #000;
 }
 #hero h2 {
   color: #2c4964;
@@ -437,10 +439,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.5s;
   color: #fff;
-  background: #1977cc;
+  background: #000;
 }
 #hero .btn-get-started:hover {
-  background: #3291e6;
+  background: #fff;
+  color: #000;
+  border: #000 solid 1px;
 }
 @media (min-width: 1024px) {
   #hero {
@@ -511,7 +515,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #1977cc;
+  background: #000;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -577,7 +581,7 @@ section {
 --------------------------------------------------------------*/
 .why-us .content {
   padding: 30px;
-  background: #1977cc;
+  background: #000;
   border-radius: 4px;
   color: #fff;
 }
@@ -601,7 +605,7 @@ section {
   font-size: 14px;
 }
 .why-us .content .more-btn:hover {
-  color: #1977cc;
+  color: #000;
   background: #fff;
 }
 .why-us .icon-boxes .icon-box {
@@ -614,7 +618,7 @@ section {
 }
 .why-us .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #1977cc;
+  color: #000;
   margin-bottom: 30px;
 }
 .why-us .icon-boxes .icon-box h4 {
@@ -651,17 +655,17 @@ section {
   justify-content: center;
   width: 64px;
   height: 64px;
-  border: 2px solid #8dc2f1;
+  border: 2px solid #000;
   border-radius: 50px;
   transition: 0.5s;
 }
 .about .icon-box .icon i {
-  color: #1977cc;
+  color: #000;
   font-size: 32px;
 }
 .about .icon-box:hover .icon {
-  background: #1977cc;
-  border-color: #1977cc;
+  background: #000;
+  border-color: #000;
 }
 .about .icon-box:hover .icon i {
   color: #fff;
@@ -677,7 +681,7 @@ section {
   transition: 0.3s;
 }
 .about .icon-box .title a:hover {
-  color: #1977cc;
+  color: #000;
 }
 .about .icon-box .description {
   margin-left: 85px;
@@ -692,7 +696,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#1977cc 50%, rgba(25, 119, 204, 0.4) 52%);
+  background: radial-gradient(#000 50%, rgba(48, 51, 54, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -731,13 +735,13 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(25, 119, 204, 0.7);
+  border: 5px solid rgba(255, 255, 255, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
 }
 .about .play-btn:hover::after {
-  border-left: 15px solid #1977cc;
+  border-left: 15px solid #000;
   transform: scale(20);
 }
 .about .play-btn:hover::before {
@@ -799,7 +803,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 20px;
-  background: #1977cc;
+  background: #000;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -834,7 +838,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #1977cc;
+  background: #000;
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -854,7 +858,7 @@ section {
   top: -8px;
   height: 100%;
   width: 100%;
-  background: #badaf7;
+  background: #00000080;
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   transform: translateZ(-1px);
@@ -873,17 +877,17 @@ section {
   margin-bottom: 0;
 }
 .services .icon-box:hover {
-  background: #1977cc;
-  border-color: #1977cc;
+  background: #000;
+  border-color: #000;
 }
 .services .icon-box:hover .icon {
   background: #fff;
 }
 .services .icon-box:hover .icon i {
-  color: #1977cc;
+  color: #000;
 }
 .services .icon-box:hover .icon::before {
-  background: #3291e6;
+  background: #424242;
 }
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
   color: #fff;
@@ -949,7 +953,7 @@ section {
   padding: 10px !important;
 }
 .appointment .php-email-form input:focus, .appointment .php-email-form textarea:focus, .appointment .php-email-form select:focus {
-  border-color: #1977cc;
+  border-color: #000;
 }
 .appointment .php-email-form input, .appointment .php-email-form select {
   height: 44px;
@@ -958,7 +962,7 @@ section {
   padding: 10px 12px;
 }
 .appointment .php-email-form button[type=submit] {
-  background: #1977cc;
+  background: #000;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -966,7 +970,7 @@ section {
   border-radius: 50px;
 }
 .appointment .php-email-form button[type=submit]:hover {
-  background: #1c84e3;
+  background: #000;
 }
 
 /*--------------------------------------------------------------
@@ -989,11 +993,11 @@ section {
   font-size: 15px;
 }
 .departments .nav-link:hover {
-  color: #1977cc;
+  color: #000;
 }
 .departments .nav-link.active {
-  color: #1977cc;
-  border-color: #1977cc;
+  color: #000;
+  border-color: #000;
 }
 .departments .tab-pane.active {
   -webkit-animation: fadeIn 0.5s ease-out;
@@ -1018,7 +1022,7 @@ section {
   }
   .departments .nav-link.active {
     color: #fff;
-    background: #1977cc;
+    background: #000;
   }
 }
 
@@ -1089,7 +1093,7 @@ section {
   border-radius: 50px;
   width: 32px;
   height: 32px;
-  background: #a0bcd5;
+  background: #0000008a;
 }
 .doctors .member .social a i {
   color: #fff;
@@ -1097,7 +1101,7 @@ section {
   margin: 0 2px;
 }
 .doctors .member .social a:hover {
-  background: #1977cc;
+  background: #000;
 }
 .doctors .member .social a + a {
   margin-left: 8px;
@@ -1157,7 +1161,7 @@ section {
   color: #343a40;
 }
 .faq .faq-list a.collapsed:hover {
-  color: #1977cc;
+  color: #000;
 }
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
@@ -1208,7 +1212,7 @@ section {
   margin: 0;
 }
 .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-  color: #badaf7;
+  color: #00000070;
   font-size: 26px;
 }
 .testimonials .testimonial-item .quote-icon-left {
@@ -1235,10 +1239,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #1977cc;
+  border: 1px solid #000;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1977cc;
+  background-color: #000;
 }
 @media (max-width: 767px) {
   .testimonials .testimonial-wrap {
@@ -1281,11 +1285,11 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #1977cc;
+  color: #fff;
   float: left;
   width: 44px;
   height: 44px;
-  background: #d6e9fa;
+  background: #000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1303,14 +1307,15 @@ section {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #4b7dab;
+  color: #000;
 }
 .contact .info .email, .contact .info .phone {
   margin-top: 40px;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #1977cc;
-  color: #fff;
+  background: #fff;
+  color: #000;
+  border: 1px solid #000;
 }
 .contact .php-email-form {
   width: 100%;
@@ -1368,7 +1373,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #1977cc;
+  background: #000;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1376,7 +1381,7 @@ section {
   border-radius: 50px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #1c84e3;
+  background: #000;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1442,7 +1447,7 @@ section {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #1c84e3;
+  color: #000;
   font-size: 18px;
   line-height: 1;
 }
@@ -1462,7 +1467,7 @@ section {
 }
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #1977cc;
+  color: #000;
 }
 #footer .footer-newsletter {
   font-size: 15px;
@@ -1497,13 +1502,13 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #1977cc;
+  background: #000;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
 }
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #1c84e3;
+  background: #000;
 }
 #footer .credits {
   padding-top: 5px;
@@ -1513,7 +1518,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #1977cc;
+  background: #000;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1525,7 +1530,8 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #1c84e3;
-  color: #fff;
+  background: #fff;
+  color: #000;
   text-decoration: none;
+  border: 1px solid #000;
 }
