Ajuste de Nome e Cores

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: space-between;
   font-size: 14px;
-  color: #2c4964;
+  color: #000;
   white-space: nowrap;
   transition: 0.3s;
   border-bottom: 2px solid #fff;
