--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -833,6 +833,7 @@ section {
   border: 1px solid #d5e1ed;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
+  border-radius: 14px;
 }
 .services .icon-box .icon {
   margin: 0 auto;
